--- a/src/firestore-app/firestore-app.html
+++ b/src/firestore-app/firestore-app.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
+<link rel="import" href="./view.html">
 
 <dom-module id="firestore-app">
   <template>
@@ -8,6 +9,7 @@
       }
     </style>
     <h2>Hello [[prop1]]!</h2>
+    <my-view></my-view>
   </template>
 
   <script>
