addForm is working

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     messagingSenderId: "31394158520"
   };
   firebase.initializeApp(config);
-  var firestore = firebase.firestore();
+  firestore = firebase.firestore();
   
 </script>
     <firestore-app></firestore-app>
