list is working

--- a/src/firestore-app/firestore-app.html
+++ b/src/firestore-app/firestore-app.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="./input-form.html">
+<link rel="import" href="./list-items.html">
 
 <dom-module id="firestore-app">
   <template>
@@ -10,6 +11,8 @@
     </style>
     <h2>Hello [[prop1]]!</h2>
     <input-form></input-form>
+    <hr>
+    <list-items></list-items>
   </template>
 
   <script>
